--- a/automagicalCss/css/jquery.automagicalCss.css
+++ b/automagicalCss/css/jquery.automagicalCss.css
@@ -13,4 +13,4 @@
   font-size: 13px;
 }
 
-.automagicalCss-right { top: 0; right: 0; width: 200; }
+.automagicalCss-right { top: 20%; right: 0; width: 200; }
